# ignition-toolbox

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  PROJECT_GOALS.md  README.md  ROADMAP_PHASES.md  SECURITY.md  docker-compose.yml  electron-builder.yml  package-lock.json  package.json
backend/: backend.spec  pyproject.toml  requirements-build.txt  requirements.txt  run_backend.py
backend/ignition_toolkit/: __init__.py  cli.py  cli_server.py  config.py
backend/ignition_toolkit/ai/: __init__.py  client.py
backend/ignition_toolkit/api/: __init__.py  app.py  dependencies.py  errors.py
backend/ignition_toolkit/browser/: __init__.py  component_discovery.js  manager.py  recorder.py
backend/ignition_toolkit/clouddesigner/: __init__.py  docker.py  manager.py  models.py
backend/ignition_toolkit/core/: __init__.py  config.py  exceptions.py  interfaces.py  paths.py  validation.py
backend/ignition_toolkit/credentials/: __init__.py  encryption.py  models.py  vault.py
backend/ignition_toolkit/designer/: __init__.py  detector.py  manager.py  platform_linux.py  platform_windows.py
backend/ignition_toolkit/gateway/: __init__.py  client.py  endpoints.py  exceptions.py  models.py
backend/ignition_toolkit/modules/: __init__.py  metadata_parser.py
backend/ignition_toolkit/playbook/: __init__.py  cancellation.py  engine.py  exceptions.py  execution_manager.py  exporter.py  installer.py  loader.py  metadata.py  models.py  parameters.py  registry.py  state_manager.py  step_executor.py  update_checker.py
backend/ignition_toolkit/scheduler/: __init__.py  service.py
backend/ignition_toolkit/stackbuilder/: __init__.py  catalog.py  compose_generator.py  config_generators.py  ignition_db_registration.py  integration_engine.py  keycloak_generator.py  stack_runner.py
backend/ignition_toolkit/startup/: __init__.py  exceptions.py  health.py  lifecycle.py  playwright_installer.py  validators.py
backend/ignition_toolkit/storage/: __init__.py  database.py  migrate_booleans.py  models.py  verify_test_suite_tables.py
backend/ignition_toolkit/update/: __init__.py  backup.py  checker.py  installer.py
backend/ignition_toolkit/visual_testing/: __init__.py  baseline_manager.py  comparison.py
backend/playbooks/: CLAUDE_CODE_INSTRUCTIONS.md  test_login.html
backend/playbooks/designer/: README.md  launch_designer_linux.yaml  launch_designer_shortcut.yaml
backend/playbooks/gateway/: api_key_setup.yaml  gateway_login.yaml  gateway_restart.yaml  module_install.yaml  module_uninstall.yaml  module_upgrade_Claude.yaml  module_upgrade_GIT.yaml  module_upgrade_ONVIF.yaml  module_upgrade_Python3.yaml  module_upgrade_Sim.yaml  reset_trial.yaml
backend/playbooks/perspective/: README.md  test_buttons.yaml  test_discovery_debug.yaml  test_docks.yaml  test_inputs.yaml  test_suite_master.yaml  (+2 more)
(+207 files in other folders)
