[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ignition-toolkit"
version = "5.1.2"  # Updated: 2025-12-16
description = "Lightweight automation toolkit for Ignition SCADA Gateway operations with plugin-based playbook library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nigel G", email = "your-email@example.com"}
]
keywords = ["ignition", "scada", "automation", "testing", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.2",
    "cryptography>=44.0.0",
    "playwright>=1.49.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.1",
    "websockets>=14.0",
    "click>=8.1.7",
    "rich>=13.9.0",
    "apscheduler>=3.10.4",
    "psutil>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
ai = [
    "anthropic>=0.42.0",
]
designer = [
    "pywinauto>=0.6.8; sys_platform == 'win32'",
    "python-xlib>=0.33; sys_platform == 'linux'",
    "pyatspi>=2.38.2; sys_platform == 'linux'",
]

[project.scripts]
ignition-toolkit = "ignition_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/nigelgwork/ignition-playground"
Documentation = "https://github.com/nigelgwork/ignition-playground/docs"
Repository = "https://github.com/nigelgwork/ignition-playground"
Issues = "https://github.com/nigelgwork/ignition-playground/issues"

[tool.setuptools]
packages = ["ignition_toolkit"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "integration: Integration tests requiring external services",
    "slow: Slow running tests",
]
